--- a/ansible/kraken.yml
+++ b/ansible/kraken.yml
@@ -1,9 +1,9 @@
 ---
-- hosts: orchestration
+- hosts: localhost
   gather_facts: true
-  remote_user: "{{ orchestration_user }}"
+  #remote_user: "{{ orchestration_user }}"
   vars_files:
-   - vars/kraken_vars.yml
+   - kraken_vars.yml
 
   tasks:
   - name: Git clone kraken repository
@@ -22,5 +22,5 @@
       cd "{{ kraken_dir }}"
       cp -r "{{ scenarios_folder_path }}"* scenarios/
       unset CONFIG
-      python3 run_kraken.py
+      python3 run_kraken.py 
     ignore_errors: yes
